# auraOS

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
auraos/: __init__.py  cli.py  config.py  exceptions.py  guardrails.py
auraos/core/: __init__.py  agent.py  autonomous_agent.py  response.py  task.py
auraos/fintech/: __init__.py  agents.py  aml.py  compliance.py  compliance_tools.py  fx.py  katilim.py  kyc.py  market.py  risk.py  sar.py  settlement.py
auraos/integrations/: __init__.py
auraos/knowledge/: __init__.py  base.py  chunker.py  document.py  embeddings.py  loaders.py  splitters.py
auraos/llm/: __init__.py  base.py  factory.py
auraos/mcp/: __init__.py  adapter.py  client.py  config.py
auraos/memory/: __init__.py  base.py  conversation.py  focus.py  session.py  summary.py
auraos/observability/: __init__.py  audit.py  cost.py  metrics.py  structured_logger.py  tracer.py
auraos/sandbox/: __init__.py  shell.py  workspace.py
auraos/security/: __init__.py  policy.py  rbac.py
auraos/team/: __init__.py  team.py
auraos/tools/: __init__.py  builtins.py  context.py  decorator.py  registry.py  schema.py  subagent.py  validator.py
auraos/utils/: __init__.py  cache.py  circuit_breaker.py  idempotency.py  logger.py  rate_limit.py  retry.py
docs/: ARCHITECTURE.md  CLI.md  EKSIKLIK_ANALIZI.md  ROADMAP.md  upsonic_analysis.md
examples/: 01_quick_start.py  02_fintech_tools.py  03_team_compliance.py  04_rag_knowledge.py  05_autonomous_workspace.py
tests/: conftest.py  test_agent.py  test_enterprise.py  test_fintech.py  test_integrations.py  test_llm_providers.py  test_llm_unit.py  test_mcp.py  test_sandbox.py  test_tool_architecture.py  test_tools.py  test_v02.py  test_v04.py  test_workflow.py
(+21 files in other folders)
