[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auraos"
version = "0.5.0"
description = "AuraOS - Kurumsal sınıf finansal AI Agent Framework"
authors = [{name = "Ates", email = "ates@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "fintech", "llm", "autonomous", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "tenacity>=8.0",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
groq = ["groq>=0.4"]
ollama = ["ollama>=0.4"]
rag = ["chromadb>=0.4", "sentence-transformers>=2.0"]
loaders = ["pdfplumber>=0.9", "python-docx>=1.0", "beautifulsoup4>=4.12"]
mcp = ["mcp>=1.0"]
memory = ["redis>=5.0", "psycopg2-binary>=2.9"]
ocr = ["pytesseract>=0.3", "Pillow>=10.0"]
fintech = ["yfinance>=0.2", "pandas>=2.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "groq>=0.4",
    "ollama>=0.4",
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
    "redis>=5.0",
    "yfinance>=0.2",
    "pandas>=2.0",
]

[project.scripts]
auraos = "auraos.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["auraos*"]
